# launchpad

./: .gitignore  AGENTS.md  CLAUDE.md  CURSORRULES.md  DIRECTORY.md  GOVERNANCE.md  MANIFEST.md  README.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml
.launchpad/: .gitkeep
_agents/: AGENTS_README.md
_design-system/: DESIGN_SYSTEM.md  QUICK_REFERENCE.md
_integrations/: INTEGRATIONS.md
_scratch/: .gitkeep
_scripts/: audit-idea.ps1  directory-qco.ps1  new-project.ps1  provision-db.ps1  setup-env.ps1  setup-hooks.ps1  sop-status.ps1
_sops/: 00-idea-intake.md  01-quick-validation.md  01a-rigorous-idea-audit.md  02-mvp-scope-contract.md  03-revenue-model-lock.md  04-design-brief.md  05-project-setup.md  06-infrastructure-provisioning.md  07-development-protocol.md  08-testing-qa-checklist.md  09-pre-ship-checklist.md  10-launch-day-protocol.md  11-post-launch-monitoring.md  12-marketing-activation.md  VERSIONING.md
_stack/: SECURITY_BASELINE.md  STACK.md  TECH_BASELINE.md  anti-patterns.md  dependencies.md  patterns.md
_vault/: IDEAS.md
projects/launchpad-app/src-tauri/: Cargo.toml  tauri.conf.json
projects/launchpad-app/src-tauri/.cargo/: config.toml
projects/launchpad-app/src-tauri/capabilities/: default.json
projects/launchpad-app/src-tauri/src/: lib.rs  main.rs
projects/launchpad-app/src-tauri/src/commands/: analyzer.rs  artifacts.rs  chat.rs  credentials.rs  file_tools.rs  ideas.rs  mod.rs  projects.rs  settings.rs  shot_clock.rs  sops.rs  workflow.rs
projects/launchpad-app/src-tauri/src/db/: mod.rs
(+159 files in other folders)
